[package]
name = "logger-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {  version = "0.7.2", features = [ "postgres", "runtime-tokio-rustls", "time", "chrono" ]}
futures = "0.3.1"
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ] }
warp = "0.3.6"
serde = { version = "1.0.189", features = [ "derive" ] }
serde_json = "1.0.107"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = [ "serde" ] }
thiserror = "1.0.49"
inventory = "0.3.12"
unic-ucd-category = "0.9.0"
toml = "0.8.2"
timer = "0.2.0"
handlebars = "4.4.0"
